@@ -1,8 +1,10 @@
 package com.system_gestion_soutenance.api.coordinator.jury.service;
 
+import com.system_gestion_soutenance.api.common.audit.Audited;
 import com.system_gestion_soutenance.api.admin.config.juryrole.entity.JuryRoleTemplate;
 import com.system_gestion_soutenance.api.admin.config.juryrole.repository.JuryRoleTemplateRepository;
 import com.system_gestion_soutenance.api.coordinator.jury.dto.CreateJuryRequest;
+import com.system_gestion_soutenance.api.coordinator.jury.dto.UpdateJuryRequest;
 import com.system_gestion_soutenance.api.coordinator.jury.entity.Jury;
 import com.system_gestion_soutenance.api.coordinator.jury.entity.JuryMember;
 import com.system_gestion_soutenance.api.coordinator.jury.repository.JuryRepository;
@@ -10,12 +12,13 @@ import com.system_gestion_soutenance.api.coordinator.project.entity.Project;
 import com.system_gestion_soutenance.api.coordinator.project.repository.ProjectRepository;
 import com.system_gestion_soutenance.api.user.entity.Teacher;
 import com.system_gestion_soutenance.api.user.repository.TeacherRepository;
-import java.util.*;
-import java.util.stream.Collectors;
-import org.springframework.http.HttpStatus;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+import com.system_gestion_soutenance.api.common.exception.EntityNotFoundException;
+import com.system_gestion_soutenance.api.common.exception.InvalidBusinessStateException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.server.ResponseStatusException;
 
 @Service
 public class JuryService {
@@ -34,17 +37,18 @@ public class JuryService {
 	}
 
 	@Transactional(readOnly = true)
-	public List<Map<String, Object>> findAll() {
-		return juryRepository.findAllWithDetails().stream().map(this::toResponse).collect(Collectors.toList());
+	public List<Jury> findAll() {
+		return juryRepository.findAllWithDetails();
 	}
 
+	@Audited(action = "CREATE", entity = "Jury")
 	@Transactional
-	public Map<String, Object> create(CreateJuryRequest request) {
+	public Jury create(CreateJuryRequest request) {
 		Project project = projectRepository.findById(request.projectId())
-				.orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Projet introuvable"));
+				.orElseThrow(() -> new InvalidBusinessStateException("Projet introuvable"));
 
-		JuryRoleTemplate template = juryRoleTemplateRepository.findById(request.templateId()).orElseThrow(
-				() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Template de rôle jury introuvable"));
+		JuryRoleTemplate template = juryRoleTemplateRepository.findById(request.templateId())
+				.orElseThrow(() -> new InvalidBusinessStateException("Template de rôle jury introuvable"));
 
 		validateNoDuplicateTeachers(request.members());
 
@@ -54,84 +58,58 @@ public class JuryService {
 
 		List<JuryMember> members = request.members().stream().map(m -> {
 			Teacher teacher = teacherRepository.findById(m.teacherId())
-					.orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST,
-							"Enseignant introuvable: " + m.teacherId()));
+					.orElseThrow(() -> new InvalidBusinessStateException("Enseignant introuvable: " + m.teacherId()));
 			JuryMember jm = new JuryMember();
 			jm.setJury(jury);
 			jm.setRoleName(m.roleName());
 			jm.setTeacher(teacher);
 			return jm;
-		}).collect(Collectors.toList());
+		}).toList();
 		jury.setMembers(members);
 
-		return toResponse(juryRepository.save(jury));
+		return juryRepository.save(jury);
 	}
 
+	@Audited(action = "UPDATE", entity = "Jury")
 	@Transactional
-	public Map<String, Object> update(Long id, Map<String, Object> updates) {
-		Jury jury = juryRepository.findById(id)
-				.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Jury non trouvé"));
+	public Jury update(Long id, UpdateJuryRequest updates) {
+		Jury jury = juryRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Jury non trouvé"));
 
-		if (updates.containsKey("projectId")) {
-			Project project = projectRepository.findById(Long.parseLong((String) updates.get("projectId")))
-					.orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Projet introuvable"));
+		if (updates.projectId() != null) {
+			Project project = projectRepository.findById(updates.projectId())
+					.orElseThrow(() -> new InvalidBusinessStateException("Projet introuvable"));
 			jury.setProject(project);
 		}
-		if (updates.containsKey("templateId")) {
-			JuryRoleTemplate template = juryRoleTemplateRepository
-					.findById(Long.parseLong((String) updates.get("templateId")))
-					.orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST,
-							"Template de rôle jury introuvable"));
+		if (updates.templateId() != null) {
+			JuryRoleTemplate template = juryRoleTemplateRepository.findById(updates.templateId())
+					.orElseThrow(() -> new InvalidBusinessStateException("Template de rôle jury introuvable"));
 			jury.setTemplate(template);
 		}
-		if (updates.containsKey("members")) {
-			@SuppressWarnings("unchecked")
-			List<Map<String, String>> memberData = (List<Map<String, String>>) updates.get("members");
-			validateNoDuplicateTeachers(memberData);
+		if (updates.members() != null) {
+			validateNoDuplicateTeachers(updates.members());
 
 			jury.getMembers().clear();
-			for (Map<String, String> m : memberData) {
-				Teacher teacher = teacherRepository.findById(Long.parseLong(m.get("teacherId")))
-						.orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST,
-								"Enseignant introuvable: " + m.get("teacherId")));
+			for (UpdateJuryRequest.MemberEntry m : updates.members()) {
+				Teacher teacher = teacherRepository.findById(m.teacherId()).orElseThrow(
+						() -> new InvalidBusinessStateException("Enseignant introuvable: " + m.teacherId()));
 				JuryMember jm = new JuryMember();
 				jm.setJury(jury);
-				jm.setRoleName(m.get("roleName"));
+				jm.setRoleName(m.roleName());
 				jm.setTeacher(teacher);
 				jury.getMembers().add(jm);
 			}
 		}
 
-		return toResponse(juryRepository.save(jury));
+		return juryRepository.save(jury);
 	}
 
+	@Audited(action = "DELETE", entity = "Jury")
 	@Transactional
 	public void delete(Long id) {
 		if (!juryRepository.existsById(id)) {
-			throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Jury non trouvé");
+			throw new EntityNotFoundException("Jury non trouvé");
 		}
 		juryRepository.deleteById(id);
-	}
-
-	private Map<String, Object> toResponse(Jury jury) {
-		Map<String, Object> map = new LinkedHashMap<>();
-		map.put("id", jury.getId());
-		map.put("projectId", jury.getProject().getId());
-		map.put("projectTitle", jury.getProject().getTitle());
-		map.put("defenseType", jury.getProject().getDefenseType());
-		map.put("templateId", jury.getTemplateId());
-		map.put("templateName", jury.getTemplateName());
-
-		List<Map<String, Object>> members = jury.getMembers().stream().map(m -> {
-			Map<String, Object> mm = new LinkedHashMap<>();
-			mm.put("roleName", m.getRoleName());
-			mm.put("teacherId", m.getTeacher().getId());
-			mm.put("teacherName", m.getTeacher().getFirstName() + " " + m.getTeacher().getLastName());
-			return mm;
-		}).collect(Collectors.toList());
-		map.put("members", members);
-
-		return map;
 	}
 
 	private void validateNoDuplicateTeachers(List<?> members) {
@@ -140,13 +118,13 @@ public class JuryService {
 			Long tid;
 			if (m instanceof CreateJuryRequest.MemberEntry entry) {
 				tid = entry.teacherId();
-			} else if (m instanceof Map<?, ?> map) {
-				tid = Long.parseLong((String) map.get("teacherId"));
+			} else if (m instanceof UpdateJuryRequest.MemberEntry entry) {
+				tid = entry.teacherId();
 			} else {
 				continue;
 			}
 			if (!teacherIds.add(tid)) {
-				throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
+				throw new InvalidBusinessStateException(
 						"Un enseignant ne peut être assigné qu'à un seul rôle dans un même jury");
 			}
 		}
