@@ -6,9 +6,14 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.system_gestion_soutenance.api.auth.jwt.JwtTokenProvider;
+import com.system_gestion_soutenance.api.common.mapper.ProjectMapper;
 import com.system_gestion_soutenance.api.coordinator.project.dto.CreateProjectRequest;
+import com.system_gestion_soutenance.api.coordinator.project.dto.ProjectResponse;
+import com.system_gestion_soutenance.api.coordinator.project.dto.UpdateProjectRequest;
+import com.system_gestion_soutenance.api.coordinator.project.entity.Project;
 import com.system_gestion_soutenance.api.coordinator.project.service.ProjectService;
 import com.system_gestion_soutenance.api.user.repository.UserRepository;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.AfterEach;
@@ -37,6 +42,9 @@ class ProjectControllerTest {
 	private ProjectService projectService;
 
 	@MockitoBean
+	private ProjectMapper projectMapper;
+
+	@MockitoBean
 	private JwtTokenProvider jwtTokenProvider;
 
 	@MockitoBean
@@ -54,37 +62,56 @@ class ProjectControllerTest {
 	}
 
 	@Test
+	@SuppressWarnings("unchecked")
 	void findAll_returnsProjects() throws Exception {
-		when(projectService.findAll()).thenReturn(List.of(Map.of("id", 1L, "title", "Projet Test")));
+		Project project = mock(Project.class);
+		when(project.getId()).thenReturn(1L);
+		when(project.getTitle()).thenReturn("Projet Test");
+
+		ProjectResponse dto = new ProjectResponse(1L, "Projet Test", "Desc", "PFE", 1L, "Supervisor", List.of());
+
+		when(projectService.findAll()).thenReturn(List.of(project));
+		when(projectService.buildProjectGroupIdMap(anyList())).thenReturn(Map.of(1L, 1L));
+		when(projectMapper.toDto(project, Map.of(1L, 1L))).thenReturn(dto);
 
 		mockMvc.perform(get("/api/coordinator/projects")).andExpect(status().isOk())
-				.andExpect(jsonPath("$.size()").value(1)).andExpect(jsonPath("$[0].title").value("Projet Test"));
+				.andExpect(jsonPath("$.data.size()").value(1))
+				.andExpect(jsonPath("$.data[0].title").value("Projet Test"));
 	}
 
 	@Test
 	void create_returnsCreated() throws Exception {
-		CreateProjectRequest request = new CreateProjectRequest("New Project", "Description", 1L, List.of(1L), "PFE");
-		when(projectService.create(any())).thenReturn(Map.of("id", 1L, "title", "New Project"));
+		CreateProjectRequest request = new CreateProjectRequest("New Project", "Description", 1L, "PFE", List.of(1L));
+		Project project = mock(Project.class);
+		ProjectResponse dto = new ProjectResponse(1L, "New Project", "Desc", "PFE", 1L, "Supervisor", List.of());
+
+		when(projectService.create(any())).thenReturn(project);
+		when(projectMapper.toDto(project, Collections.emptyMap())).thenReturn(dto);
 
 		mockMvc.perform(post("/api/coordinator/projects").contentType(MediaType.APPLICATION_JSON)
 				.content(objectMapper.writeValueAsString(request))).andExpect(status().isCreated())
-				.andExpect(jsonPath("$.title").value("New Project"));
+				.andExpect(jsonPath("$.data.title").value("New Project"));
 	}
 
 	@Test
 	void update_returnsProject() throws Exception {
-		Map<String, Object> updates = Map.of("title", "Updated Project");
-		when(projectService.update(eq(1L), any())).thenReturn(Map.of("id", 1L, "title", "Updated Project"));
+		UpdateProjectRequest updates = new UpdateProjectRequest("Updated Project", "Desc", "PFE");
+		Project project = mock(Project.class);
+		ProjectResponse dto = new ProjectResponse(1L, "Updated Project", "Desc", "PFE", 1L, "Supervisor", List.of());
+
+		when(projectService.update(eq(1L), any())).thenReturn(project);
+		when(projectMapper.toDto(project, Collections.emptyMap())).thenReturn(dto);
 
 		mockMvc.perform(put("/api/coordinator/projects/1").contentType(MediaType.APPLICATION_JSON)
 				.content(objectMapper.writeValueAsString(updates))).andExpect(status().isOk())
-				.andExpect(jsonPath("$.title").value("Updated Project"));
+				.andExpect(jsonPath("$.data.title").value("Updated Project"));
 	}
 
 	@Test
-	void delete_returnsNoContent() throws Exception {
+	void delete_returns200() throws Exception {
 		doNothing().when(projectService).delete(1L);
 
-		mockMvc.perform(delete("/api/coordinator/projects/1")).andExpect(status().isNoContent());
+		mockMvc.perform(delete("/api/coordinator/projects/1")).andExpect(status().isOk())
+				.andExpect(jsonPath("$.success").value(true));
 	}
 }
